# projeto_01

./: pyproject.toml
backend/: .pdm-python  README.md  pyproject.toml
backend/alunos/: admin.py  models.py  serializers.py  views.py
backend/alunos/migrations/: 0001_initial.py  0002_cidade.py  0003_aluno.py  0004_professor_turma_delete_aluno.py  0005_aluno.py  0006_delete_cidade_delete_estado.py
backend/config/: settings.py  urls.py
